--- a/src/pages/index/robot.less
+++ b/src/pages/index/robot.less
@@ -1,7 +1,10 @@
 * {
     padding: 0;
     margin: 0;
-    -webkit-touch-callout: none;
+    -webkit-touch-callout:none;
+    -moz-touch-callout:none;
+    -ms-touch-callout:none;
+    touch-callout:none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 html,body {
@@ -9,6 +12,7 @@ html,body {
     position: fixed;
     overflow: hidden;
     width: 100%;
+    -webkit-overflow-scrolling: touch;   
 }
 ul,
 li {
@@ -73,6 +77,16 @@ li {
     color: #fff;
     z-index: 100;
     position: absolute;
+    transition: all 1s;
+    icon{
+        display: inline-block;
+        width: 25px;
+        height: 25px;
+        vertical-align: middle;
+        margin-top: -3px;
+        background: url('./images/header-icon.png') no-repeat left top;
+        background-size:100% auto;
+    }
 }
 
 .dialog-list {
@@ -130,7 +144,7 @@ li {
         display: none;
     }
 }
-.fix-bottom{
+.main-robot-box .fix-bottom{
     position: fixed;
     bottom: 0;
 }
@@ -199,17 +213,17 @@ li {
 .bottom-text-content {
     .customer-btn {
         display: none;
-        width: 50px;
+        width: 40px;
         height: 50px;
-        margin: 8px 6px;
+        margin: 8px 8px;
         position: relative;
         background: url('./images/rgkf.png') no-repeat left top;
         background-size: 100% auto;
         cursor: pointer;
     }
     input {
-        margin: 12px 2px 12px 10px;
-        height: 24px;
+        margin: 10px 2px 10px 10px;
+        height: 26px;
         padding: 5px;
         line-height: 24px;
         font-size: 14px;
@@ -233,61 +247,129 @@ li {
         cursor: pointer;
         line-height: 38px;
         display: block;
-        border: 1px solid #9CBAF1;
+        text-align: center;
+        background:#6899ee;
         border-radius: 50%;
-        p {
-            text-align: center;
-            display: block;
-            color: #6796ee;
-            padding: 0;
-            margin: 0;
-            font-size: 14px;
+        transition: all 1s;
+        icon{
+            display: inline-block;
+            width: 22px;
+            height: 22px;
+            vertical-align: middle;
+            margin-left: -3px;
+            background: url(./images/sendMsg.png) no-repeat left top;
+            background-size: 100% auto;
         }
     }
 }
-
 .im-list-block {
     margin: 0;
     .robot-say {
         margin-bottom: 15px;
         opacity: 0;
+        -webkit-touch-callout:none;
         animation: fadeIn 0.5s linear 0s 1 forwards normal;
         /* Safari 与 Chrome: */
         -webkit-animation: fadeIn 0.5s linear 0s 1 forwards normal;
         .chat-con {
             .tools-pop-up {
+                cursor: pointer;
+                width: 50px;
+                padding: 0px 10px;
+                height: 60px;
+                background: #000;
+                filter: alpha(opacity=60);
+                -moz-opacity: 0.6;
+                -khtml-opacity: 0.6;
+                opacity: 0.6;
+                border-radius: 4px;
+                position: absolute;
+                left: 50%;
+                top: -70px;
+                margin-left: -60px;
                 display: none;
+                .myzf-ico {
+                    position: absolute;
+                    left: 50%;
+                    margin-left: -5px;
+                    bottom: -5px;
+                    width: 11px;
+                    height: 5px;
+                    display: inline-block;
+                    background: url(./images/myfz-arrow.png) no-repeat;
+                    background-size: 100%;
+                }
+                div{
+                    display: inline-block;
+                    height: 100%;
+                    text-align: center;
+                    width: 100%;
+                    .ico-myzf1{
+                        background: url(./images/myfz-ico1.png) no-repeat;
+                        background-size: 100%;
+                        cursor: pointer;
+                        display: block;
+                        width: 20px;
+                        height: 20px;
+                        margin: 10px auto 5px auto;
+                    }
+                    span{
+                        font-size: 12px;
+                        color: #fff;
+                    }
+                }
             }
             .chat-msg {
-                padding: 10px 15px;
+                padding: 15px 15px;
                 border-radius: 15px;
                 max-width: 82%;
                 display: inline-block;
                 position: relative;
-                border: 1px solid #ddd;
+                // border: 1px solid #ddd;
                 background: #fff;
+                box-shadow: 0px 0px 3px 0px #bbb;
             }
             .music-chat-msg{
                 width: 82%;
                 max-width: 280px;
-                background: #fff url('./images/music-bg.jpg') no-repeat right top;
                 border: 1px solid #e2e5f3;
                 margin-left: 0;
                 margin-right: 0;
                 .chat-arr{
+                    width: 20px;
+                    height: 20px;
+                    border: none;
                     background: url(./images/ico-music-bg.png) no-repeat;
                     left: -3px;
                     top: 0;
-                }                
+                }  
+                .from-panel{
+                    height: 30px;
+                    line-height: 30px;
+                    p{
+                        font-size: 12px;
+                        color: #cdd0da;
+                        padding-left: 10px;
+                    }
+                } 
+                .chat-message{
+                background: #fff url('./images/music-bg.jpg') no-repeat right top;
+                border-top-right-radius: 15px;
+                padding: 10px;
+                }             
                 .minute-box {
                     position: relative;
                     padding-left: 60px;
                     vertical-align: top;
                     dd span{
                         color: #fff;
+                        font-size: 16px;
+                        margin-bottom: 5px;
+                        margin-top: 10px;
                     }
                     dd a{
-                        color: #a8bbe5;
+                        color: #fff;
+                        font-size: 13px;
                         text-decoration: none;
                     }
                     .music-play {
@@ -306,13 +388,30 @@ li {
             }
             .chat-arr {
                 display: inline-block;
-                width: 22px;
-                height: 22px;
+                width: 0;
+                height: 0;
                 font-size: 0;
-                background: url('./images/ico-mgs-gray1.png') no-repeat;
+                /* background: url(src/pages/index/images/ico-mgs-gray1.png) no-repeat; */
                 position: absolute;
-                top: -1px;
-                left: -9px;
+                border: 9px solid transparent;
+                border-right: 9px solid #fff;
+                border-top: 0px solid transparent;
+                border-bottom: 12px solid transparent;
+                top: 9px;
+                left: -17px;
+            //    &:after{
+            //     content: '';
+            //     display: block;
+            //     width: 0;
+            //     height: 0;
+            //     border: 6px solid transparent;
+            //     border-right: 9px solid #fff;
+            //     border-top: 0px solid transparent;
+            //     border-bottom: 12px solid transparent;
+            //     position: absolute;
+            //     left: -4px;
+            //     top: 1px;
+            //    }
             }
             .chat-msg-txt {
                 font-size: 14px;
@@ -453,25 +552,29 @@ li {
                 
             }
             .chat-msg-txt-map{
-                width: 100%;
+                max-width: 250px;
                 height: auto;
                 overflow: hidden;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 color: #000;
+                height: 40px;
                 text-align: left;
-                line-height: 24px;
-                font-size: 14px;
+                line-height: 40px;
+                font-size: 16px;
+                padding: 0 10px;
             }
             .chat-message-map {
-                margin-top: 8px;
                 text-align: center;
-                padding-bottom: 10px;
-                display: inline-block;
+                display: block;
+                border-bottom-left-radius: 15px;
+                border-bottom-right-radius: 15px;
+                overflow: hidden;                
                 img{
                     width: 100%;
                     max-width: 300px;
+                    vertical-align: top;
                 }
             }
             .pho-imgs {
@@ -495,6 +598,16 @@ li {
             }
         }
     }
+    [data-type=audio]{
+        .chat-con .music-chat-msg{
+            padding:0;
+        }
+    }
+    [data-type=position]{
+        .chat-con .chat-msg{
+            padding:0;
+        }
+    }
     .user-say{
         margin-bottom: 15px;
         opacity: 0;
@@ -507,7 +620,7 @@ li {
                 display: none;
             }
             .chat-msg {
-                padding: 10px 15px;
+                padding: 15px 15px;
                 border-radius: 15px;
                 max-width: 82%;
                 display: inline-block;
@@ -515,17 +628,21 @@ li {
                 word-break: break-all;
                 word-wrap: break-word;
                 background: #6697ee;
-                border: 1px solid #3a79ea;
+                // border: 1px solid #3a79ea;
             }
             .chat-arr {
                 display: inline-block;
-                width: 22px;
-                height: 22px;
+                width: 0;
+                height: 0;
                 font-size: 0;
-                background: url(./images/ico-mgs-blue1.png) no-repeat;
+                /* background: url(src/pages/index/images/ico-mgs-gray1.png) no-repeat; */
                 position: absolute;
-                right: -8px;
-                top: -1px;
+                border: 9px solid transparent;
+                border-left: 9px solid #6697ee;
+                border-top: 0px solid transparent;
+                border-bottom: 12px solid transparent;
+                top: 9px;
+                right: -17px;
             }
             .chat-msg-txt {
                 font-size: 14px;
@@ -543,7 +660,16 @@ li {
         text-align: center;
         margin: 0 auto 25px;
         clear: both;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
+        p{  
+            color: #fff;
+            display: inline-block;
+            padding: 1px 10px;
+            background: #bbb8b8;
+            border-radius: 20px;
+            -moz-border-radius: 20px;
+            -webkit-border-radius: 20px;
+        }
     }
 }
 @keyframes fadeIn
