--- a/src/pages/index/robot.less
+++ b/src/pages/index/robot.less
@@ -14,6 +14,16 @@ html,body {
     width: 100%;
     -webkit-overflow-scrolling: touch;   
 }
+.viewer-fixed {
+    position: fixed;
+    top: 36px;
+}
+iframe{
+    display: none;
+}
+img{
+    -webkit-transform : translate3d(0,0,0);
+}
 ul,
 li {
     list-style: none;
@@ -68,14 +78,14 @@ li {
     left: 0px;
     top: 0px;
     width: 100%;
-    height: 18px;
+    height: 38px;
+    line-height: 38px;
     display: block;
     text-align: center;
-    padding: 10px 0;
     font-size: 16px;
     background-color: #6697ee;
     color: #fff;
-    z-index: 100;
+    z-index: 10000;
     position: absolute;
     transition: all 1s;
     icon{
@@ -90,7 +100,7 @@ li {
 }
 
 .dialog-list {
-    // display: block;
+    display: block;
     // -webkit-box-flex: 1;
     // -moz-box-flex: 1;
     // -webkit-flex: 1;
@@ -117,7 +127,7 @@ li {
     }
     .user-load {
        margin: 0 auto;
-        width: 170px;
+        width: 180px;
         height: 40px;
         line-height: 40px;
         p {
@@ -221,7 +231,7 @@ li {
         background-size: 100% auto;
         cursor: pointer;
     }
-    input {
+    input,textarea {
         margin: 10px 2px 10px 10px;
         height: 26px;
         padding: 5px;
@@ -265,6 +275,8 @@ li {
 .im-list-block {
     margin: 0;
     .robot-say {
+        -webkit-user-select: none;/*禁用手机浏览器的用户选择功能 */
+        -moz-user-select: none;
         margin-bottom: 15px;
         opacity: 0;
         -webkit-touch-callout:none;
@@ -320,6 +332,7 @@ li {
                 }
             }
             .chat-msg {
+                z-index: 1;
                 padding: 15px 15px;
                 border-radius: 15px;
                 max-width: 82%;
@@ -327,7 +340,7 @@ li {
                 position: relative;
                 // border: 1px solid #ddd;
                 background: #fff;
-                box-shadow: 0px 0px 3px 0px #bbb;
+                // box-shadow: 0px 0px 3px 0px #bbb;
             }
             .music-chat-msg{
                 width: 82%;
@@ -424,14 +437,53 @@ li {
                     width: 100%;
                 }
             }
+            .video-chat-message{
+                background: #000;
+            }
             .chat-message{
                 text-align: left;
                 overflow: hidden;
+                
+                .vdo-display{
+                    background:url('./images/video-icon.png') no-repeat left top;
+                    width: 50px;
+                    height: 50px;
+                    position: absolute;
+                    top: 0;
+                    bottom:0;
+                    left:0;
+                    right: 0;
+                    background-size: 100% auto;
+                    display: block;
+                    margin: auto;
+                    z-index: 0;
+                }
+                .video-loading{
+                    -webkit-background-size: cover;
+                    -moz-background-size: cover;
+                    -o-background-size: cover;
+                    background-size: cover;
+                    background: url('./images/iframe-load.gif') no-repeat left top;
+                    width: 16px;
+                    height: 16px;
+                }
                 iframe{
+                    display: block;
                     max-width: 100%;
                     position: relative;
-                    z-index: 1;
-                    overflow: hidden;                }
+                    z-index: 10;
+                    overflow: hidden;  
+                }
+               
+                .video-panel-iframe{
+                    width: 330px;
+                    height: 180px;
+                    position: relative;
+                    z-index: 10;
+                }
+                .video-width-auto{
+                    width: auto;
+                }
                 .more-result{
                     text-align: left;
                     color: #999;
