--- a/src/pages/index/robot.less
+++ b/src/pages/index/robot.less
@@ -14,7 +14,7 @@ html,body {
     width: 100%;
     -webkit-overflow-scrolling: touch;   
 }
-.viewer-fixed {
+body .viewer-fixed {
     position: fixed;
     top: 36px;
 }
